--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-*.DS_Store
-
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -90,3 +88,10 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+.vscode/
+
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
